--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -44,12 +44,11 @@
 
 	<body>
 		<!--引入抽取的topbar-->
-		<!--模板名：会使用thymeleaf的前后缀配置规则进行解析-->
+		<!--模板名：会使用thymeleaf的前后缀配置规则进行解析 模板名::片段名 方式-->
 		<div th:replace="commons/bar::topbar"></div>
-
 		<div class="container-fluid">
 			<div class="row">
-				<!--引入侧边栏-->
+				<!--引入侧边栏 选择器方式-->
 				<div th:replace="commons/bar::#sidebar(activeUri='emps')"></div>
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
