--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -86,7 +86,10 @@
 							<label>department</label>
 							<!--提交的是部门的id-->
 							<select class="form-control" name="department.id">
-								<option th:selected="${emp!=null}?${dept.id == emp.department.id}" th:value="${dept.id}" th:each="dept:${depts}" th:text="${dept.departmentName}">1</option>
+								<option th:selected="${emp!=null}?${dept.id == emp.department.id}"
+										th:value="${dept.id}"
+										th:each="dept:${depts}"
+										th:text="${dept.departmentName}">1</option>
 							</select>
 						</div>
 						<div class="form-group">
