--- a/src/main/resources/templates/error/5xx.html
+++ b/src/main/resources/templates/error/5xx.html
@@ -9,10 +9,10 @@
 
 		<title>Dashboard Template for Bootstrap</title>
 		<!-- Bootstrap core CSS -->
-		<link href="../../static/asserts/css/bootstrap.min.css" rel="stylesheet">
+		<link href="../../static/asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
-		<link href="../../static/asserts/css/dashboard.css" rel="stylesheet">
+		<link href="../../static/asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
 		<style type="text/css">
 			/* Chart.js */
 			
@@ -54,7 +54,8 @@
 					<h2>timestamp:[[${timestamp}]]</h2>
 					<h2>exception:[[${exception}]]</h2>
 					<h2>message:[[${message}]]</h2>
-					<h2>ext:[[${status}]]</h2>
+					<h2>error:[[${error}]]</h2>
+					<h2>path:[[${path}]]</h2>
 				</main>
 			</div>
 		</div>
@@ -62,18 +63,18 @@
 		<!-- Bootstrap core JavaScript
     ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script type="text/javascript" src="../../static/asserts/js/jquery-3.2.1.slim.min.js" ></script>
-		<script type="text/javascript" src="../../static/asserts/js/popper.min.js" ></script>
-		<script type="text/javascript" src="../../static/asserts/js/bootstrap.min.js" ></script>
+		<script type="text/javascript" src="asserts/js/jquery-3.2.1.slim.min.js" th:src="@{/webjars/jquery/3.3.1/jquery.js}"></script>
+		<script type="text/javascript" src="asserts/js/popper.min.js" th:src="@{/webjars/popper.js/1.11.1/dist/popper.js}"></script>
+		<script type="text/javascript" src="asserts/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.js}"></script>
 
 		<!-- Icons -->
-		<script type="text/javascript" src="../../static/asserts/js/feather.min.js" ></script>
+		<script type="text/javascript" src="asserts/js/feather.min.js" th:src="@{/asserts/js/feather.min.js}"></script>
 		<script>
 			feather.replace()
 		</script>
 
 		<!-- Graphs -->
-		<script type="text/javascript" src="../../static/asserts/js/Chart.min.js" ></script>
+		<script type="text/javascript" src="../../static/asserts/js/Chart.min.js" th:src="@{/asserts/js/Chart.min.js}" ></script>
 		<script>
 			var ctx = document.getElementById("myChart");
 			var myChart = new Chart(ctx, {
