--- a/src/main/resources/templates/error/5xx.html
+++ b/src/main/resources/templates/error/5xx.html
@@ -56,6 +56,7 @@
 					<h2>message:[[${message}]]</h2>
 					<h2>error:[[${error}]]</h2>
 					<h2>path:[[${path}]]</h2>
+					<h2>ext:[[${ext}]]</h2>
 				</main>
 			</div>
 		</div>
